Fix issue: https://forum.pirroproductions.com/index.php?threads/afk.8052/

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,7 @@
 name: AntiAFK
 main: com.gmail.filoghost.antiafk.AntiAFK
 version: 1.0
-
-depend: [WildCommons]
+commands:
+  lastmove:
+    description: Lastmove
+    usage: "§cUso corretto: §7§o/lastmove <nick>"
